Try to fix some versioning and YAML weirdness

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,8 +1,9 @@
 ---
 - id: pylama
   name: pylama
+  description: This hook runs pylama.
   entry: pylama
   language: python
-  'types': [python]
+  types: [file, python]
   args: []
   additional_dependencies: []
